# internal/api/oas_response_decoders_gen.go
@@ -199,7 +199,7 @@ func decodeAdminCreateCategoryQnaItemResponse(resp *http.Response) (res *QnaItem
 	return res, validate.UnexpectedStatusCodeWithResponse(resp)
 }
 
-func decodeAdminCreateCourseResponse(resp *http.Response) (res AdminCreateCourseRes, _ error) {
+func decodeAdminCreateCourseResponse(resp *http.Response) (res *Course, _ error) {
 	switch resp.StatusCode {
 	case 201:
 		// Code 201.
@@ -216,50 +216,6 @@ func decodeAdminCreateCourseResponse(resp *http.Response) (res AdminCreateCourse
 			d := jx.DecodeBytes(buf)
 
 			var response Course
-			if err := func() error {
-				if err := response.Decode(d); err != nil {
-					return err
-				}
-				if err := d.Skip(); err != io.EOF {
-					return errors.New("unexpected trailing data")
-				}
-				return nil
-			}(); err != nil {
-				err = &ogenerrors.DecodeBodyError{
-					ContentType: ct,
-					Body:        buf,
-					Err:         err,
-				}
-				return res, err
-			}
-			// Validate response.
-			if err := func() error {
-				if err := response.Validate(); err != nil {
-					return err
-				}
-				return nil
-			}(); err != nil {
-				return res, errors.Wrap(err, "validate")
-			}
-			return &response, nil
-		default:
-			return res, validate.InvalidContentType(ct)
-		}
-	case 422:
-		// Code 422.
-		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
-		if err != nil {
-			return res, errors.Wrap(err, "parse media type")
-		}
-		switch {
-		case ct == "application/json":
-			buf, err := io.ReadAll(resp.Body)
-			if err != nil {
-				return res, err
-			}
-			d := jx.DecodeBytes(buf)
-
-			var response ValidationError
 			if err := func() error {
 				if err := response.Decode(d); err != nil {
 					return err
@@ -917,7 +873,7 @@ func decodeAdminGetBlogPostResponse(resp *http.Response) (res AdminGetBlogPostRe
 	return res, validate.UnexpectedStatusCodeWithResponse(resp)
 }
 
-func decodeAdminGetCourseResponse(resp *http.Response) (res AdminGetCourseRes, _ error) {
+func decodeAdminGetCourseResponse(resp *http.Response) (res *Course, _ error) {
 	switch resp.StatusCode {
 	case 200:
 		// Code 200.
@@ -958,41 +914,6 @@ func decodeAdminGetCourseResponse(resp *http.Response) (res AdminGetCourseRes, _
 				return nil
 			}(); err != nil {
 				return res, errors.Wrap(err, "validate")
-			}
-			return &response, nil
-		default:
-			return res, validate.InvalidContentType(ct)
-		}
-	case 404:
-		// Code 404.
-		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
-		if err != nil {
-			return res, errors.Wrap(err, "parse media type")
-		}
-		switch {
-		case ct == "application/json":
-			buf, err := io.ReadAll(resp.Body)
-			if err != nil {
-				return res, err
-			}
-			d := jx.DecodeBytes(buf)
-
-			var response NotFoundError
-			if err := func() error {
-				if err := response.Decode(d); err != nil {
-					return err
-				}
-				if err := d.Skip(); err != io.EOF {
-					return errors.New("unexpected trailing data")
-				}
-				return nil
-			}(); err != nil {
-				err = &ogenerrors.DecodeBodyError{
-					ContentType: ct,
-					Body:        buf,
-					Err:         err,
-				}
-				return res, err
 			}
 			return &response, nil
 		default:
@@ -2666,7 +2587,7 @@ func decodeAdminUpdateCategoryQnaItemResponse(resp *http.Response) (res *QnaItem
 	return res, validate.UnexpectedStatusCodeWithResponse(resp)
 }
 
-func decodeAdminUpdateCourseResponse(resp *http.Response) (res AdminUpdateCourseRes, _ error) {
+func decodeAdminUpdateCourseResponse(resp *http.Response) (res *Course, _ error) {
 	switch resp.StatusCode {
 	case 200:
 		// Code 200.
@@ -2683,50 +2604,6 @@ func decodeAdminUpdateCourseResponse(resp *http.Response) (res AdminUpdateCourse
 			d := jx.DecodeBytes(buf)
 
 			var response Course
-			if err := func() error {
-				if err := response.Decode(d); err != nil {
-					return err
-				}
-				if err := d.Skip(); err != io.EOF {
-					return errors.New("unexpected trailing data")
-				}
-				return nil
-			}(); err != nil {
-				err = &ogenerrors.DecodeBodyError{
-					ContentType: ct,
-					Body:        buf,
-					Err:         err,
-				}
-				return res, err
-			}
-			// Validate response.
-			if err := func() error {
-				if err := response.Validate(); err != nil {
-					return err
-				}
-				return nil
-			}(); err != nil {
-				return res, errors.Wrap(err, "validate")
-			}
-			return &response, nil
-		default:
-			return res, validate.InvalidContentType(ct)
-		}
-	case 422:
-		// Code 422.
-		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
-		if err != nil {
-			return res, errors.Wrap(err, "parse media type")
-		}
-		switch {
-		case ct == "application/json":
-			buf, err := io.ReadAll(resp.Body)
-			if err != nil {
-				return res, err
-			}
-			d := jx.DecodeBytes(buf)
-
-			var response ValidationError
 			if err := func() error {
 				if err := response.Decode(d); err != nil {
 					return err
